src/objects/EarnedValueTask__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Describe why tasks are not progressing as planned or make additional notes for future reference.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CostAccruals__c</fullName>
        <inlineHelpText>Enter here any costs which should be accrued for the purpose of calculating the EV metrics and trend EACs.  This would include the costs of subs work that is counted in the percent complete assessment, but not yet costed to the project actuals.</inlineHelpText>
        <label>Cost Accruals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EarnedValueHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Earned Value Header</label>
        <referenceTo>EarnedValueHeader__c</referenceTo>
        <relationshipLabel>Earned Value Tasks</relationshipLabel>
        <relationshipName>Earned_Value_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EarnedValueSnapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Earned Value Snapshot</label>
        <referenceTo>EarnedValueSnapshot__c</referenceTo>
        <relationshipLabel>Earned Value Tasks</relationshipLabel>
        <relationshipName>EarnedValueTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EarnedValue__c</fullName>
        <formula>if (and(not(isblank(TaskTotalApprovedCostSnapshot__c)),PercentComplete__c&gt;0),
   TaskTotalApprovedCostSnapshot__c * (PercentComplete__c / 100),
   0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earned Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NotifyTaskOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to fire workflow to notify task owner</description>
        <label>Notify Task Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotifyUserEmail__c</fullName>
        <label>Notify User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PercentComplete__c</fullName>
        <inlineHelpText>Review the work that has been completed and discuss with the task/deliverable owner the level of effort required to finalize the task/deliverable.</inlineHelpText>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Earned Value Tasks</relationshipLabel>
        <relationshipName>Earned_Value_Tasks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportName__c</fullName>
        <formula>&apos;tbd&apos;
/*
HYPERLINK(
&apos;/&apos; +  EarnedValueSnapshot__r.EarnedValueHeader__r.Id , 
EarnedValueSnapshot__r.EarnedValueHeader__r.ReportName__c , 
&apos;_blank&apos;)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SnapshotDate__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskName__c</fullName>
        <formula>ProjectTask__r.Name</formula>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskTotalApprovedCostSnapshot__c</fullName>
        <label>Task Total Approved Cost Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrendEAC1__c</fullName>
        <formula>IF(PercentComplete__c = 0, 0, ProjectTask__r.TotalProjectFunctionalBurdenedCost__c / PercentComplete__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a predicted Forecast/EAC Cost calculated using the current Earned Value, presuming the current productivity rate continues through to completion.  Calculated as &quot;Total Cost / Percent Complete&quot;</inlineHelpText>
        <label>Trend EAC 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrendEAC2__c</fullName>
        <formula>(ProjectTask__r.TotalProjectFunctionalBurdenedCost__c + ProjectTask__r.TotalApprovedCost__c)  * (1 - PercentComplete__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a predicted Forecast/EAC Cost calculated using the current Earned Value, presuming the rest of the project proceeds as originally planned through to completion.   Calculated as &quot;Total Cost + Budget Cost x (1- Percent Complete)&quot;.</inlineHelpText>
        <label>Trend EAC 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Earned Value Task</label>
    <nameField>
        <displayFormat>EVT-{0000000}</displayFormat>
        <label>Earned Value Task Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Earned Value Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>